# neuralnetworkdemo

./: .gitignore  LICENSE  README.md
data/: README.md
src/: CMakeLists.txt  config.h.in  dataset.cpp  dataset.h  mnist_loader.cpp  mnist_loader.h  neural_network.cpp  neural_network.h  neuralnetworkdemo.cpp  pngfuncs.cpp  pngfuncs.h
src/cmake/modules/: FindCPPUNIT.cmake
src/test/: CMakeLists.txt  neuralnetworktest.cpp  neuralnetworktest.h  unittest.cpp
tests/: image.ann
